# Agentic-Learning-Course

./: .env.example  README.md
assignment 2/: README.md  pyproject.toml  requirements.txt
assignment 2.1/: README.md  assignment_2_1_deliverables.txt  pyproject.toml
assignment 2.1/src/assignment_2_1_feedback_reflection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assignment 2.1/src/feedback_reflection/: __init__.py  agent.py  main.py
assignment 2/src/reflective_agent/: __init__.py  agent.py  main.py
assignment 3/: README.md  deliverables_template.txt  pyproject.toml  requirements.txt
assignment 3.1/: README.md  assignment_3_1_deliverables.txt  deliverables_template.txt  pyproject.toml
assignment 3.1/src/assignment_3_1_stock_market_advisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assignment 3.1/src/stock_market_advisor/: __init__.py  agent.py  main.py
assignment 3/src/weather_recommendation/: __init__.py  agent.py  main.py
assignment 4/: README.md  deliverables_template.txt  pyproject.toml  requirements.txt
assignment 4.1/: README.md  assignment_4_1_deliverables.txt  deliverables_template.txt  pyproject.toml
assignment 4.1/src/assignment_4_1_meal_prep_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assignment 4.1/src/meal_prep_planner/: __init__.py  agent.py  main.py
assignment 4/src/virtual_event_planner/: __init__.py  agent.py  main.py
assignment 5/: README.md  deliverables_template.txt  pyproject.toml
assignment 5.1/: README.md  assignment_5_1_deliverables.txt  deliverables_template.txt  pyproject.toml  requirements.txt
assignment 5.1/src/assignment_5_1_weather_logistics_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assignment 5.1/src/weather_logistics_system/: __init__.py  agents.py  main.py
assignment 5/src/assignment_5_multi_agent_stock_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assignment 5/src/multi_agent_stock_system/: __init__.py  agents.py  main.py
assignment 6/: README.md  assignment_6_deliverables.txt  deliverables_template.txt  pyproject.toml
assignment 6/src/assignment_6_customer_support_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assignment 6/src/customer_support_system/: __init__.py  agents.py  main.py
tmp/pdfs/: build_agentic_patterns_cheat_sheet.py
