[project]
name = "assignment-3-1-stock-market-advisor"
version = "0.1.0"
description = "A stock market advisor agent that combines Alpha Vantage data with generative AI."
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai",
    "openai",
    "requests",
]

[project.scripts]
stock-market-advisor = "stock_market_advisor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

