[project]
name = "assignment-3-weather-recommendation"
version = "0.1.0"
description = "A weather recommendation agent that combines OpenWeatherMap data with generative AI."
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai",
    "openai",
    "requests",
]

[project.scripts]
weather-recommendation = "weather_recommendation.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

