[project]
name = "assignment-4-virtual-event-planner"
version = "0.1.0"
description = "A virtual event planning agent with structured phases and progress tracking."
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai",
    "openai",
]

[project.scripts]
virtual-event-planner = "virtual_event_planner.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

